// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/StepList/Step NextButtonWithDisabled smoke-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1 ">
    <li class="_step_14g5z_1 _step_active_14g5z_50 ">
      <div class="_stepSideWrapper_14g5z_143 "
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_active_14g5z_218">
          1
        </span>
        <div class="_stepLine_14g5z_1 ">
        </div>
      </div>
      <h3 id="steptitle-:r9:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        tittel
      </h3>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
      <div class="_nextLine_14g5z_278">
      </div>
      <span class="_buttonWrapper_14g5z_274">
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
                disabled
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            Neste
          </span>
        </button>
      </span>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step NextButtonWithSpinner smoke-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1 ">
    <li class="_step_14g5z_1 _step_active_14g5z_50 ">
      <div class="_stepSideWrapper_14g5z_143 "
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_active_14g5z_218">
          1
        </span>
        <div class="_stepLine_14g5z_1 ">
        </div>
      </div>
      <h3 id="steptitle-:r8:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        tittel
      </h3>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
      <div class="_nextLine_14g5z_278">
      </div>
      <span class="_buttonWrapper_14g5z_274">
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
                type="button"
        >
          <span class="_buttonText_6ybyo_69 _hide_6ybyo_149">
            Neste
          </span>
          <div aria-live="polite"
               aria-atomic="true"
               class="_spinner_wnf1f_5 _spinner_white_wnf1f_19 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_6ybyo_153 "
          >
            <div class="_spinnerAnimation_wnf1f_40 ">
            </div>
            <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
              Laster inn
            </span>
          </div>
        </button>
      </span>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1 ">
    <li id="htmlid"
        class="_step_14g5z_1 _step_passive_14g5z_55 dummyClassname"
        lang="nb"
        data-testid="123ID"
    >
      <div class="_stepSideWrapper_14g5z_143 "
           id="htmlid-focus-target"
           tabindex="-1"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
          1
        </span>
        <div class="_stepLine_14g5z_1 ">
        </div>
      </div>
      <h3 id="steptitle-htmlid"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        title
      </h3>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
        <div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithEditAccessibleDescription play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1 ">
    <li class="_step_14g5z_1 _step_active_14g5z_50 ">
      <div class="_stepSideWrapper_14g5z_143 "
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_active_14g5z_218">
          1
        </span>
        <div class="_stepLine_14g5z_1 ">
        </div>
      </div>
      <h3 id="steptitle-:r6:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        tittel
      </h3>
      <div class="_stepContent_14g5z_86  
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
        <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _stepEditButton_14g5z_46"
                type="button"
                aria-describedby="steptitle-:r6:"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
            </path>
          </svg>
          <span class>
            Endre
          </span>
        </button>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithFullWidthResult smoke-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1 ">
    <li class="_step_14g5z_1 _step_neutralResult_14g5z_60 ">
      <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_neutralResult_14g5z_232">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r5:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r5:">
              Fullført
            </title>
            <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
            </path>
          </svg>
        </span>
        <div class="_stepLine_14g5z_1 _stepLine_neutralResult_14g5z_1">
        </div>
      </div>
      <h3 id="steptitle-:r4:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        jeg er en tittel
      </h3>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_neutralResult_14g5z_106 _stepContent_fullWidth_14g5z_134
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithIconTitleAS play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1 ">
    <li class="_step_14g5z_1 _step_active_14g5z_50 ">
      <div class="_stepSideWrapper_14g5z_143 "
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_active_14g5z_218">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r3:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r3:">
              svg-tittel
            </title>
            <path d="M6 2h12v6l-4 4 4 4v6H6v-6l4-4-4-4V2Zm10 14.5-4-4-4 4V20h8v-3.5Zm-4-5 4-4V4H8v3.5l4 4ZM10 6h4v.75l-2 2-2-2V6Z">
            </path>
          </svg>
        </span>
        <div class="_stepLine_14g5z_1 ">
        </div>
      </div>
      <h2 id="steptitle-:r2:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        jeg er en tittel
      </h2>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
        <div>
          Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/Step WithRef play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1 ">
    <li class="_step_14g5z_1 _step_passive_14g5z_55 "
        id="dummyIdForwardedFromRef"
    >
      <div class="_stepSideWrapper_14g5z_143 "
           tabindex="-1"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
          1
        </span>
        <div class="_stepLine_14g5z_1 ">
        </div>
      </div>
      <h3 id="steptitle-:r0:"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        title
      </h3>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
        <div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;
